add modify lantern, ecoart, performative layer

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -118,7 +118,7 @@
     In both iterations, movements were memorized arrangements of improvised gestures with intentionality. As an accessibility measure, I articulated the gestures with poetic tone and <strong>audio description</strong>. The set included a fabric banner painted by me years ago featuring a "mother rabbit" with her offspring on a seed-pod boat.
   </p>
 
-  <p style="background-color: #f9f9f9; padding: 1rem; border-left: 4px solid #ccc;">
+  <p class="highlight-note">
     <em>SPOONS</em> directly informs <strong>Eco-Illuminessence</strong> by bringing shadow improvisation, object animation, and accessible, non-verbal storytelling into the heart of the installation-performance.
   </p>
 </section>
@@ -136,23 +136,45 @@
       </figure>
   </section>
 
-  <section>
-    <h2>✦ Eco-Illuminessence: The Visual Core</h2>
-    <p>The term <strong>Eco-Illuminessence</strong> refers to the installation’s sculptural foundation: a collection of <strong>lantern-assemblies</strong> and a large-scale <strong>sumi-e curtain</strong>. These visual elements—crafted from salvaged fabric, translucent materials, and ink-marked rice paper—formed the poetic architecture of the space. Installed as a visual art exhibition, they evoked themes of ecological imagination, interspecies kinship, and material storytelling.</p>
+ <!-- 2. Eco-Illuminessence: The Visual & Sensory Core -->
+ <section>
+      <h2>🌘 Eco-Illuminessence: The Visual & Sensory Core</h2>
+      <p>This immersive project combines traditional <strong>sumi-e paintings</strong>, animal-shaped <strong>lanterns</strong>, <strong>upcycled garden waste</strong> objects, and semi-translucent fabric sculptures. It invites participants to explore light, shadow, and tactile elements in a layered sensory crossing.</p>
+      <p>The <strong>sumi-e curtain</strong> is composed of ~70 clear 11x14 pockets, each holding A4 rice paper ink sketches created during the COVID lockdown via virtual plein-air challenges and later on-location plein-air painting. Visitors are encouraged to interact with the curtain and lanterns using light and objects from a <strong>participant experience station</strong> (glass, bamboo sticks, patterned objects, mesh).</p>
   </section>
 
+    <!-- 3. Lanterns & Eco-Art Approach -->
   <section>
-    <h2>✦ A Sensory Crossing: The Performative Layer</h2>
-    <p>In performance, the fabric lantern sculptures became puppet-characters—animated not through traditional puppetry,
-      but through <strong>light manipulation, shadow play, and direct interaction</strong>. The artist used handheld lights 
-      and live cameras to mobilize the shadows of these forms, transforming static objects into living silhouettes.</p>
-    <p>A live camera pointed at a flat, illuminated surface allowed the artist to paint directly with sumi-e ink. This surface 
-      functioned as both a projection canvas and a performance space. The live feed was projected onto surrounding surfaces,
-      creating a layered visual field. Participants were invited to co-create scenes through movement, layering, and light.</p>
-    <p>This improvisational layer—<strong>a sensory crossing</strong>—allowed the visual art to speak back, poetically, through 
-      gesture and ephemeral choreography. It marked a turning point in the artist’s practice: a conversation between stillness 
-      and motion, installation and performance, object and presence.</p>
-  </section>
+      <h2>🦋 Lanterns & Eco-Art Approach</h2>
+        The lanterns are <strong>semi-hard sculptures</strong> and stage characters; their shadows perform alongside the artist. Eco-materials adapt to West Coast wet weather: rosemary branches, later reinforced with wire, and lavender stems adorn daytime sculptures. Lanterns, props, and the Sumi-e curtain all participate in <strong>interactive improvisation</strong>—no rehearsal, experiments with light, position, and shadow gesture determine the performance path.</p>
+      <p>This approach prioritizes sustainability, accessibility, and ecological imagination—turning found, upcycled, or natural materials into poetic visual and performative objects.</p>
+   </section>
+
+     <!-- 4. Performative Layer< -->
+<section>
+  <h2>✦ A Sensory Crossing: The Performative Layer</h2>
+  <p>
+    The performative layer of <em>Eco-Illuminessence</em> was developed in situ through a series of 
+    improvisations, using the lantern installation as the stage and the lantern characters as social
+    beings. This process emerged after the first week of exhibition, as the artist explored and 
+    responded to the gallery’s light conditions, the challenges of managing darkness, and the interplay of 
+    handheld lights, sunset illumination, disco light and projections from a book camera.
+  </p>
+  <p>
+    In performance, the fabric lantern sculptures became living puppet-characters—animated not 
+    through conventional puppetry, but through <strong>light manipulation, shadow play, and direct interaction</strong>. 
+    Handheld lights and live cameras allowed the artist to mobilize shadows, transforming static forms into dynamic silhouettes.
+  </p>
+  <p>
+    A live camera pointed at a flat, illuminated surface enabled direct sumi-e painting. This surface functioned simultaneously 
+    as a projection canvas and performance stage. The live feed was projected onto surrounding surfaces, creating a layered visual field. 
+    Participants were invited to co-create moments through movement, layering, and manipulation of light.
+  </p>
+  <p>
+    This improvisational layer—<strong>a sensory crossing</strong>—allowed the visual art to speak back poetically through gesture and ephemeral
+    choreography. It marked a turning point in the artist’s practice: a conversation between stillness and motion, installation and performance, object and presence.
+  </p>
+</section>
 <section>
   <h2>🎞️ Highlights in Motion</h2>
   <p>Below are some brief clips capturing moments of improvisation and light-play. Video of full performance is at the bottom of the page.</p>
@@ -400,6 +422,7 @@
 
 </body>
 </html>
+
 
 
 
