<h2>✦ Parallel Pathway: Lantern Travelers — Neuro-Sensing Voyage Crossing</h2>

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -175,6 +175,31 @@
     choreography. It marked a turning point in the artist’s practice: a conversation between stillness and motion, installation and performance, object and presence.
   </p>
 </section>
+
+<!-- 5. Parallel Pathway: Lantern Travelers — Neuro-Sensing Voyage Crossing -->
+<section>
+  <h2>✦ Parallel Pathway: Lantern Travelers — Neuro-Sensing Voyage Crossing</h2>
+  <p>
+    A parallel component of <em>Eco-Illuminessence</em> explored a <strong>poly-sensory, neurodivergent creative process</strong> as modular lanterns 
+    traveled through urban 
+    and natural landscapes. This journey was presented to exhibition audiences as a <strong>photo documentation</strong>, capturing encounters 
+    <strong>before, during, and after the exhibition</strong>.
+  </p>
+  <p>
+    Neuro-sensing is an integral part of my creative process. Therefore, all lanterns are made lightweight and modular—designed 
+    to be easily disassembled and reassembled on-site. They traveled via buses, ferries, and public spaces, functioning as both 
+    invited and uninvited guests of festivals, forming part of my photo-making journey.
+  </p>
+  <p>
+    I actively engage with the lanterns, integrating them into the environment. For example, the dragon hat lantern interacts 
+    with urban geometry, climbing racks, gate stoppers, lines of Garry oak branches, lifeguard boats, and the varied habitats 
+    along Ambleside Beach (West Vancouver). Water bodies, such as ponds at Governor’s House, provide reflective surfaces that 
+    reveal new forms, while nighttime photos capture landmarks like Science World mirrored on puddles.
+  </p>
+</section>
+
+    
+<!-- 6. Highlights & Video Clips -->
 <section>
   <h2>🎞️ Highlights in Motion</h2>
   <p>Below are some brief clips capturing moments of improvisation and light-play. Video of full performance is at the bottom of the page.</p>
@@ -192,7 +217,7 @@
     </div>
   </div>
 
-
+  
     <!-- Session 2 full excerpt -->
   <h3 style="margin-top: 2rem;">📺 Session 2: Rough Cut Excerpt</h3>
   <p><strong>Description:</strong> Eco-Illuminessence is an access-led performance-installation using animal-shaped lanterns, shifting light, shadow, and silence to create non-verbal and spoken narrative experiences. Structured as a visual poem, it unfolds through movement, image, and sensory cues, connected by rhythm, spatial relationships, and audience presence rather than fixed spoken language.</p>
@@ -422,6 +447,7 @@
 
 </body>
 </html>
+
 
 
 
