--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -329,8 +329,25 @@
       allowfullscreen>
     </iframe>
   </div>
+  <p style="font-size: 0.9rem; color: #666; background-color: #f9f9f9; padding: 0.8rem; border-left: 4px solid #ccc;" 
+     class="dark-mode-text">
+     Video credit: Edited by Theo Gardner| Camera: Theo Gardner
+  </p>
 
 </section>
+
+<!-- 7. Credits & Acknowledgments -->
+    <section>
+      <h2>🌟 Credits & Acknowledgments</h2>
+      <ul>
+        <li><strong>Artist:</strong> Ann K. Chou</li>
+        <li><strong>Mentorship:</strong> Tim Gosley (shadow performance, moving-light technique)</li>
+        <li><strong>Residencies:</strong> Cross-disability screen dance residency (SPOONS)</li>
+        <li><strong>Grant Support:</strong> BC Arts Council</li>
+        <li><strong>Collaborators:</strong> Co-creators in SPOONS</li>
+        <li><strong>Special Thanks:</strong> Xchanges Gallery, Victoria, BC</li>
+      </ul>
+    </section>
 
     
 </main>
@@ -447,6 +464,7 @@
 
 </body>
 </html>
+
 
 
 
