Update print statement from 'Hello' to 'Goodbye'

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -124,7 +124,7 @@
 </section>
   
   <section>
-    <h2>📸 A Living Work in Progress</h2>
+    <h2>📸 Eco-Illuminessence: A Living Work in Progress</h2>
     <p><em>Eco-Illuminessence: A Sensory Crossing</em> is a cross-disciplinary body of work developed between 2024 and 2025, marking the artist’s first foray into performance. Rooted in her visual installation practice, this evolving series bridges sculptural form and live gesture—inviting audiences into a world of <strong>low-tech enchantment and quiet storytelling through light, shadow, and movement</strong>.</p>
     <p>Presented through <strong>two in-person showings</strong> and <strong>three livestreamed sessions</strong>—including a hybrid event at <strong>Xchanges Gallery</strong> (Victoria, BC)—this early iteration served as both a public offering and a developmental sketch. It became a space of experimentation, reflection, and transformation.</p>
  
@@ -138,7 +138,7 @@
 
  <!-- 2. Eco-Illuminessence: The Visual & Sensory Core -->
  <section>
-      <h2>🌘 Eco-Illuminessence: The Visual & Sensory Core</h2>
+      <h2>🌘 The Visual & Sensory Core</h2>
       <p>This immersive project combines traditional <strong>sumi-e paintings</strong>, animal-shaped <strong>lanterns</strong>, <strong>upcycled garden waste</strong> objects, and semi-translucent fabric sculptures. It invites participants to explore light, shadow, and tactile elements in a layered sensory crossing.</p>
       <p>The <strong>sumi-e curtain</strong> is composed of ~70 clear 11x14 pockets, each holding A4 rice paper ink sketches created during the COVID lockdown via virtual plein-air challenges and later on-location plein-air painting. Visitors are encouraged to interact with the curtain and lanterns using light and objects from a <strong>participant experience station</strong> (glass, bamboo sticks, patterned objects, mesh).</p>
   </section>
@@ -464,6 +464,7 @@
 
 </body>
 </html>
+
 
 
 
