Update print statement from 'Hello' to 'Goodbye'

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -95,11 +95,18 @@
   
   <p>
     <em>SPOONS</em> emerged from a cross-disability screen dance residency, connecting the lived experiences of five artists. 
-    <strong>Each of us created our own scene centered around the shared motif of the spoon, reinterpreting it as a symbol of resistance and disability pride.</strong>
+    <strong>Each of us created our own scene centered around the shared motif of the spoon, reinterpreting it as a symbol of 
+      resistance and disability pride.</strong>
   </p>
 
   <p>
-    In my contribution, I rendered the spoon as hand-folded paper origami. This was a deliberate artistic statement: the "spoon"—often seen only as a tool to measure our limitations—is not only something made <em>for</em> us, but also something that can be <strong>made <em>by</em> us</strong>.
+    In my contribution, I rendered the spoon as hand-folded paper origami. This was a deliberate artistic statement: the
+    "spoon"—often seen only as a tool to measure our limitations—is not only something made <em>for</em> us, but also something
+    that can be <strong>made <em>by</em> us</strong>. 
+    
+    This philosophy, first explored with the origami spoon (2023), evolved into the Teapot Lantern series (2026). While the spoon 
+    measures energy, the teapot symbolizes the adaptive plasticity of identity, showing how cultural rituals can be remade using 
+    the materials at hand in new environments.
   </p>
 
   <p>This work evolved from the screen into two distinct live solo performances:</p>
@@ -148,6 +155,15 @@
       <h2>🦋 Lanterns & Eco-Art Approach</h2>
         The lanterns are <strong>semi-hard sculptures</strong> and stage characters; their shadows perform alongside the artist. Eco-materials adapt to West Coast wet weather: rosemary branches, later reinforced with wire, and lavender stems adorn daytime sculptures. Lanterns, props, and the Sumi-e curtain all participate in <strong>interactive improvisation</strong>—no rehearsal, experiments with light, position, and shadow gesture determine the performance path.</p>
       <p>This approach prioritizes sustainability, accessibility, and ecological imagination—turning found, upcycled, or natural materials into poetic visual and performative objects.</p>
+      <p>This practice evolved in 2026 with the <strong>Teapot Lantern</strong> series, first showcased in the <em>Plasticity</em> exhibition at Habit Coffee.
+      </p>
+      <p>
+      The teapot symbolizes cross-cultural exchange and comfort, while also reflecting the <strong>adaptive plasticity of identity</strong>. By transforming everyday disposable materials—such as Starbucks cups and grocery mesh—into ritual vessels, the work demonstrates how consumer waste can be reshaped into luminous, tactile forms.
+      </p>
+      <p>
+    In both the 2025 installation and the 2026 teapots, these sculptures act as stage characters, with their shadows performing alongside the artist. 
+    Whether responding to theatrical projections or the sideways light of a local café, the objects engage in <strong>interactive improvisation</strong>, where shadows and light collaboratively guide the narrative.
+      </p>
    </section>
 
      <!-- 4. Performative Layer< -->
@@ -507,6 +523,7 @@
 
 </body>
 </html>
+
 
 
 
