--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Ann Chou logo" />
       </a>
       <a class="active" href="#home">Home 🏠</a>
-      <a href="artist_bio.html">Bio 🧬</a>
+      <a href="Practices.html">Practices 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
       <!-- temp shop -->
@@ -560,6 +560,7 @@
 </body>
 
 </html>
+
 
 
 
