--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -36,7 +36,7 @@
       <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Ann Chou logo" />
     </a>
     <a href="index.html">Home 🏠</a>
-    <a href="artist_bio.html">Bio 🧬</a>
+    <a href="Practices.html">Practices 🧬</a>
     <a href="Eco_illum.html" class="eco-link active">Eco-Illum 🌘</a>
     <a href="workshops.html">Workshops 🎨</a>
     <!-- temp shop -->
@@ -523,6 +523,7 @@
 
 </body>
 </html>
+
 
 
 
