Replace 'Bio' link with 'Practices' link

--- a/workshops.html
+++ b/workshops.html
@@ -26,7 +26,7 @@
       <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Annreflection Studio logo">
     </a>
     <a href="index.html">Home 🏠</a>
-    <a href="artist_bio.html">Bio 🧬</a>
+    <a href="Practices.html">Practices 🧬</a>
     <a href="Eco_illum.html">Eco-Illum 🌘</a>
     <a class="active" href="workshops.html">Workshops 🎨</a>
      <!-- temp shop -->
