Update and rename artist_bio.html to Practices.html

--- a/Practices.html
+++ b/Practices.html
@@ -36,7 +36,7 @@
         <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
       </a>
       <a href="index.html">Home 🏠</a>
-      <a class="active" href="artist-bio.html">Bio 🧬</a>
+      <a href="Practices.html">Practices 🧬</a>
       <a href="Eco_illum.html">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
 
@@ -253,3 +253,4 @@
 
 </body>
 </html>
+
