--- a/Practices.html
+++ b/Practices.html
@@ -256,7 +256,7 @@
   <footer>
     <div class="flex-container2">
       <div class="flex-item-left">Art across generations: lanterns, sumi-e, movement & workshops</div>
-      <div class="flex-item-right">© 2025 Ann K. Chou (annreflection) – All rights reserved</div>
+      <div class="flex-item-right">© 2025-2026 Ann K. Chou (annreflection) – All rights reserved</div>
     </div>
   </footer>
 
@@ -334,5 +334,6 @@
 
 </body>
 </html>
+
 
 
