--- a/Practices.html
+++ b/Practices.html
@@ -222,7 +222,51 @@
     </ul>
   </section>
 
-   <section id="mission-driven" class="easy-read-box">
+	  <section id="cta-section" class="cta-container">
+  <h1 class="pillar-header">🤝 Let’s Collaborate</h1>
+  
+  <div class="collab-card">
+    <h2>Build Access and Meaning</h2>
+    <p>I welcome <strong>commissions, storefront activations, and cross-sector collaborations</strong> at the intersection of art, accessibility, and community care. With a background in healthcare and inclusive design, I bring a systems-informed approach to lantern-based artmaking that is adaptable, participatory, and environmentally responsive.</p>
+    <p>I invite partners across cultural, civic, and access-related sectors to help shape multisensory public experiences that are both artistically resonant and socially meaningful.</p>
+  </div>
+
+  <div class="workshop-info" style="margin-bottom: 2rem;">
+    <h3>Workshops & Community Projects</h3>
+    <p>Interested in a lantern-making or sumi-e storytelling workshop for your school, gallery, or community space? Let’s co-create accessible, sensory experiences together.</p>
+  </div>
+
+  <h2 style="text-align: center; margin-top: 3rem;">✨ Support the Practice</h2>
+  <div class="support-grid">
+    <a href="https://annreflection.square.site/shop/sumi-e-painting-large-banner/7" class="support-item" target="_blank">
+      <div style="font-size: 2.5rem; margin-bottom: 1rem;">🖼️</div>
+      <strong>Original Paintings</strong>
+      <p>One-of-a-kind plein-air and brushwork pieces.</p>
+    </a>
+
+    <a href="https://ko-fi.com/c/e004b270d4" class="support-item" target="_blank">
+      <div style="font-size: 2.5rem; margin-bottom: 1rem;">✨</div>
+      <strong>Custom Art Cards</strong>
+      <p>$6 tiny works made to order via Ko-fi.</p>
+    </a>
+
+    <a href="https://annreflectionarts.square.site/shop/suprise-packs/25" class="support-item" target="_blank">
+      <div style="font-size: 2.5rem; margin-bottom: 1rem;">🎁</div>
+      <strong>Surprise Packs</strong>
+      <p>$5 joyful sensory bundles.</p>
+    </a>
+  </div>
+
+  <div class="substack-box">
+    <h3>📬 Stay Connected</h3>
+    <p>For reflections on access design, brushwork process, or upcoming projects, subscribe to my newsletter:</p>
+    <p><strong><a href="https://annreflection.substack.com" target="_blank">My Substack – Stories and sketches from the studio</a></strong>.</p>
+    <hr style="width: 50%; margin: 1.5rem auto; border: 0; border-top: 1px solid #ddd;">
+    <p>I’d love to hear what kind of content you’d like more of. Reply anytime on Substack or email me at <strong>annreflection [at] gmail [dot] com</strong>.</p>
+  </div>
+</section>
+
+   <!--section id="mission-driven" class="easy-read-box">
     <h2>Let’s Collaborate to Build Access and Meaning</h2>
 	<p>I welcome commissions, storefront activations, and cross-sector collaborations at the intersection of art, accessibility, and community care. With a background in healthcare and inclusive design, I bring a systems-informed approach to lantern-based artmaking that is adaptable, participatory, and environmentally responsive.
 	<p>I invite partners across cultural, civic, and access-related sectors to help shape multisensory public experiences that are both artistically resonant and socially meaningful.  
@@ -247,7 +291,7 @@
 	  </ul>
 	
 	  <p>I’d love to hear what kind of content you’d like more of—art techniques, access culture, or collaborative walkthroughs. Reply anytime on Substack or email me at annreflection [at] gmail [dot] com.</p>
-	</section>
+	</section-->
 
 
   </main>
@@ -334,6 +378,7 @@
 
 </body>
 </html>
+
 
 
 
