--- a/Practices.html
+++ b/Practices.html
@@ -26,6 +26,15 @@
 
   gtag('config', 'G-JHX8G8JN6Y');
 </script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<script>
+  Fancybox.bind("[data-fancybox]", {
+    // Custom options for dark mode if needed
+  });
+</script>
 	
 <body>
 
@@ -211,6 +220,21 @@
       <h3>Feminist Dragonboat (2024)</h3>
       <p>Site-responsive lantern installations at Winter Arts Festival Victoria and Renfrew Ravine Moon Festival.</p>
     </div>
+	<div class="lightbox-gallery">
+    <a data-fancybox="evidence-gallery" href="rss-eco/AC0_Ecoilluminescence-summary_n_reflection.png" data-caption="AC0_Ecoilluminescence-summary_n_reflection." class="gallery-item EcoIlluminessence">
+      <img src="rss-eco/AC0_Ecoilluminescence-summary_n_reflection.png" alt="AC0_Ecoilluminescence-summary_n_reflection. />
+    </a>
+
+    <a data-fancybox="evidence-gallery" href="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" data-caption="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" class="gallery-item Spoon">
+      <img src="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" alt="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" />
+    </a>
+    <a data-fancybox="evidence-gallery" href="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" data-caption="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" class="gallery-item Spoon">
+      <img src="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.pngss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" alt="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" />
+    </a>
+		
+    <a data-fancybox="evidence-gallery" href="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" data-caption="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" class="gallery-item Lantern Festival">
+      <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" alt="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" />
+    </a>
   </section>
 
   <section id="education">
@@ -378,6 +402,7 @@
 
 </body>
 </html>
+
 
 
 
