Update print statement from 'Hello' to 'Goodbye'

--- a/Practices.html
+++ b/Practices.html
@@ -204,38 +204,42 @@
    </section>
 
 
-	   <h1 class="pillar-header">⚖️ The Evidence</h1>
 
-  <section id="exhibitions">
-    <h2>Selected Exhibitions & Performances</h2>
-    <div class="exhibit-item">
-      <h3>Eco-Illuminescence: A Sensory Crossing (2025)</h3>
-      <p>Xchanges Gallery, Victoria | BC Arts Council Awarded. Immersive hybrid performance integrating back-lit Sumi-e curtains and animal-lantern characters.</p>
-    </div>
-    <div class="exhibit-item">
-      <h3>Spoons (Work-in-Progress) (2022–2024)</h3>
-      <p>Disability and access-led pacing series featured at Vines Art Festival and Vancouver Outsider Arts Festival.</p>
-    </div>
-    <div class="exhibit-item">
-      <h3>Feminist Dragonboat (2024)</h3>
-      <p>Site-responsive lantern installations at Winter Arts Festival Victoria and Renfrew Ravine Moon Festival.</p>
-    </div>
-	<div class="lightbox-gallery">
-    <a data-fancybox="evidence-gallery" href="rss-eco/AC0_Ecoilluminescence-summary_n_reflection.png" data-caption="AC0_Ecoilluminescence-summary_n_reflection." class="gallery-item EcoIlluminessence">
-      <img src="rss-eco/AC0_Ecoilluminescence-summary_n_reflection.png" alt="AC0_Ecoilluminescence-summary_n_reflection. />
+<h1 class="pillar-header">⚖️ The Evidence</h1>
+
+<section id="exhibitions">
+  <h2>Selected Exhibitions & Performances</h2>
+  <div class="exhibit-item">
+    <h3>Eco-Illuminescence: A Sensory Crossing (2025)</h3>
+    <p>Xchanges Gallery, Victoria | BC Arts Council Awarded. Immersive hybrid performance integrating back-lit Sumi-e curtains and animal-lantern characters.</p>
+  </div>
+  <div class="exhibit-item">
+    <h3>Spoons (Work-in-Progress) (2022–2024)</h3>
+    <p>Disability and access-led pacing series featured at Vines Art Festival and Vancouver Outsider Arts Festival.</p>
+  </div>
+  <div class="exhibit-item">
+    <h3>Feminist Dragonboat (2024)</h3>
+    <p>Site-responsive lantern installations at Winter Arts Festival Victoria and Renfrew Ravine Moon Festival.</p>
+  </div>
+
+  <div class="lightbox-gallery evidence-grid">
+    <a data-fancybox="evidence-gallery" href="rss-eco/AC0_Ecoilluminescence-summary_n_reflection.png" data-caption="Eco-illuminescence summary and reflection." class="gallery-item">
+      <img src="rss-eco/AC0_Ecoilluminescence-summary_n_reflection.png" alt="Eco-illuminescence summary" />
     </a>
 
-    <a data-fancybox="evidence-gallery" href="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" data-caption="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" class="gallery-item Spoon">
-      <img src="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" alt="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" />
+    <a data-fancybox="evidence-gallery" href="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" data-caption="Spoon Dance at Vancouver Outsider Art Festival 2024." class="gallery-item">
+      <img src="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" alt="Shadow Dance at Outsider Art Festival" />
     </a>
-    <a data-fancybox="evidence-gallery" href="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" data-caption="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" class="gallery-item Spoon">
-      <img src="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.pngss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" alt="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" />
+
+    <a data-fancybox="evidence-gallery" href="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" data-caption="Spoon Dance at Vines Art Festival 2023." class="gallery-item">
+      <img src="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" alt="Spoon Dance Vines Art 2023" />
     </a>
-		
-    <a data-fancybox="evidence-gallery" href="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" data-caption="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" class="gallery-item Lantern Festival">
-      <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" alt="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" />
+    
+    <a data-fancybox="evidence-gallery" href="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" data-caption="Feminist Dragon Boats site-responsive installation." class="gallery-item">
+      <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" alt="Feminist Dragon Boats" />
     </a>
-  </section>
+  </div>
+</section>
 
   <section id="education">
     <h2>Education</h2>
@@ -402,6 +406,7 @@
 
 </body>
 </html>
+
 
 
 
