Update hero section and add featured event details

--- a/workshops.html
+++ b/workshops.html
@@ -62,7 +62,7 @@
 <!-- ✅ HERO SECTION -->
 <section class="hero" style="background: linear-gradient(rgba(245,242,237,0.9), rgba(245,242,237,0.95)), url('images/hero-artjam.jpg') center/cover no-repeat; padding: 5rem 2rem; text-align: center;">
   <div class="hero-content" style="max-width: 800px; margin: auto;">
-    <h1 style="font-size: 2.8rem; margin-bottom: 1rem; font-family: var(--font-serif);">Annreflection Studio</h1>
+    <h1 style="font-size: 2.8rem; margin-bottom: 1rem; font-family: 'Georgia', serif;">Annreflection Studio</h1>
     <p style="font-size: 1.2rem; line-height: 1.6;">A creative practice offering inclusive workshops, lantern installations, and community-based artmaking rooted in light, reflection, and interdependence.</p>
     <a href="#contact" class="button glow-ink" style="margin-top: 1.5rem; display: inline-block;">Book a Workshop</a>
   </div>
@@ -70,13 +70,29 @@
 
 <main class="main" style="padding: 2rem; max-width: 900px; margin: auto;">
 
+<section class="featured-event">
+    <span style="background: #e67e22; color: white; padding: 4px 12px; border-radius: 20px; font-size: 0.9rem; font-weight: bold;">FEATURED EVENT</span>
+    <h1 style="margin-top: 10px;">Teapot Lantern Making Art Jam</h1>
+    <p style="font-size: 1.1rem;">A free-to-participant community workshop. Join us for a soft start to create lanterns inspired by tea culture and community warmth.</p>
+    <div class="event-details" style="display: flex; flex-wrap: wrap; gap: 1.5rem; margin-top: 1rem; font-weight: bold;">
+      <span>📅 Feb 13, 2026</span>
+      <span>⏰ Soft start: 1:45 PM</span>
+      <span>📍 NeighbourSpace</span>
+      <span>💰 Cost: Free</span>
+    </div>
+  </section>
+
+
 <section id="accessibility" style="margin-bottom: 2rem;">
   <h2>Accessibility Statement</h2>
-  <p>Annreflection Studio is committed to creating workshops that are accessible, welcoming, and flexible. We prioritize sensory-friendly environments, visual communication, tactile materials, and inclusive participation across diverse bodies, languages, and learning styles. If you have specific access needs, please contact us—we’re happy to adapt.</p>
+  <p>Annreflection Studio is committed to creating workshops that are accessible, welcoming, and flexible. We prioritize sensory-friendly environments,
+    visual communication, tactile materials, and inclusive participation across diverse bodies, languages, and learning styles.
+    If you have specific access needs, please contact us—we’re happy to adapt.</p>
 </section>
 
   <h1 class="site-title">Art Jam Workshops</h1>
-  <p>Annreflection Studio hosts accessible and creative sessions in lantern-making, puppet-making, sensory storytelling, and Chinese brush painting. Each workshop invites participants into joyful, reflective making with a focus on community, identity, and expression.</p>
+  <p>Annreflection Studio hosts accessible and creative sessions in lantern-making, puppet-making, sensory storytelling,
+    and Chinese brush painting. Each workshop invites participants into joyful, reflective making with a focus on community, identity, and expression.</p>
 
   <div class="project-grid">
     <div class="project">
@@ -143,19 +159,19 @@
 
   <section id="contact">
     <h3>Contact</h3>
-    <p>Email: <a href="mailto:annreflection@gmail.com">annreflection@gmail.com</a><br>
+    <p>Email: <a href="mailto:annreflection@gmail.com">annreflection [at] gmail [dot] com</a><br>
        Facebook DM: @AnnReflection Arts and Tech</p>
   </section>
 
-  <p style="font-size: 0.9rem; color: #555; margin-top: 2rem;">
-    <em>I acknowledge that I am an uninvited guest living and creating on the unceded traditional territory of the Lək̓ʷəŋən-speaking peoples, and I am grateful to share this land with respect and reciprocity.</em>
-  </p>
+  <!--p style="font-size: 0.9rem; color: #555; margin-top: 2rem;">
+    <em>I acknowledge that I am an uninvited guest creating on the unceded traditional territory of the Lək̓ʷəŋən-speaking peoples, and I am grateful to share this land with respect and reciprocity.</em>
+</p-->
 </main>
 
 <footer>
   <div class="flex-container2">
     <div class="flex-item-left">Art across generations: lanterns, sumi-e, movement & workshops</div>
-    <div class="flex-item-right">© 2025 Ann K. Chou (Annreflection Studio) – All rights reserved</div>
+    <div class="flex-item-right">© 2025-2026 Ann K. Chou (Annreflection Studio) – All rights reserved</div>
   </div>
 </footer>
 
