Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
 
   <div class="scroll-container fade-carousel">
     <img src="rss/ann-reflection-try-it-yourself-table-exhibition-at-market_1692696342.webp" alt="Try-it-yourself table" />
+    <img src="rss/AC3a_Turtle_comrade_lotusleaves_20251004.jpg" alt="Turtle and Rabbit comrade, Lotus pod/leaves, Lantern Installation, Renfrew Moon Festival 2025" />
+    <img src="rAC3b_Turlte_ScienceWorld_202509.png" alt="Turle Lantern, Science World, 2025 />
+    <!--
     <img src="rss/AnnKChou1-Peacock Lantern  - made with broken umbrella  and pop bottle.jpg" alt="Peacock Lantern" />
-    <img src="rss/AnnKChou3-Shadow-movement dance with lit banner painted by me.jpg" alt="Shadow Movement Dance" />
+    <img src="rss/AnnKChou3-Shadow-movement dance with lit banner painted by me.jpg" alt="Shadow Movement Dance" /-->
   </div>
 
   <div class="icon-bar">
@@ -560,6 +563,7 @@
 </body>
 
 </html>
+
 
 
 
