Update Practices.html <main class="main">

--- a/Practices.html
+++ b/Practices.html
@@ -79,7 +79,7 @@
     <button id="darkModeToggleIconBar" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
   </div>
 
-  <main class="main" style="padding: 2rem">
+  <main class="main">
 	<h1 class="pillar-header">📖 The Narrative</h1>
 
   <!-- ✅ Triple Identity Banner with ARIA, Parallax Effect -->
@@ -406,6 +406,7 @@
 
 </body>
 </html>
+
 
 
 
