--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -60,8 +60,8 @@
   </div>
 
   </header>
-<div style="text-align: center; margin-top: 1rem;">
-  <img src="rss-eco\Eco-illuminescence-Xchange-banner.png" alt="Eco Illuminescence Xchanges Gallery banner" style="width: 100%; max-width: 1200px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+<div class="banner-wrapper">
+  <img src="rss-eco\Eco-illuminescence-Xchange-banner.png" alt="Eco Illuminescence Xchanges Gallery banner">
 </div>
 
 
@@ -523,6 +523,7 @@
 
 </body>
 </html>
+
 
 
 
