--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -84,7 +84,7 @@
   </div>
 
 
-  <main class="main" style="padding: 2rem; max-width: 900px; margin: 0 auto;">
+  <main class="main">
 
   <h1 class="site-title">Eco-Illuminessence: A Sensory Crossing</h1>
   <p class="highlight-subtitle">A hybrid installation-performance exploring light, shadow, and non-verbal storytelling</p>
@@ -523,6 +523,7 @@
 
 </body>
 </html>
+
 
 
 
