--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="css/style_resp.css" />
+  <link rel="stylesheet" href="css/style_eco.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.css" />
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.umd.js"></script>
 </head>
@@ -349,8 +349,7 @@
       allowfullscreen>
     </iframe>
   </div>
-  <p style="font-size: 0.9rem; color: #666; background-color: #f9f9f9; padding: 0.8rem; border-left: 4px solid #ccc;" 
-     class="dark-mode-text">
+  <p class="dark-mode-text">
      Video credit: Edited by Theo Gardner| Camera: Theo Gardner
   </p>
 
@@ -523,6 +522,7 @@
 
 </body>
 </html>
+
 
 
 
