--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -65,11 +65,7 @@
 </div>
 
 
-<!-- <div class="scroll-container">
-  <img src="rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" alt="Feminist Dragon Boat lantern resting by the pool of Governor House" />
-  <img src="rss-eco/AnnChou_eco10_pilot_closer_backlit_effect_of_sumi-e_in_clr_pk" alt="" />
-  <img src="rss/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl duo installation near Trout Lake" />
-</div>  -->
+
 
   <!-- ✅ Floating Social Icon Bar -->
  <div class="icon-bar" aria-label="Social media links">
@@ -86,9 +82,10 @@
 
   <main class="main">
 
-  <h1 class="site-title">Eco-Illuminessence: A Sensory Crossing</h1>
-  <p class="highlight-subtitle">A hybrid installation-performance exploring light, shadow, and non-verbal storytelling</p>
-
+  <section id="eco-title">
+    <h1 class="site-title">Eco-Illuminessence: A Sensory Crossing</h1>
+    <p class="highlight-subtitle">A hybrid installation-performance exploring light, shadow, and non-verbal storytelling</p>
+  </section>
     <!-- 1. Precedent Work: SPOONS -->
   <section id="precedent-work-spoons" style="margin-bottom: 2rem; line-height: 1.6;">
   <h2 style="border-bottom: 2px solid #333; padding-bottom: 0.5rem;">🎬 Precedent Work: SPOONS</h2>
@@ -522,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
