--- a/Practices.html
+++ b/Practices.html
@@ -12,7 +12,7 @@
 	<meta property="og:image" content="https://annchou.github.io/rss/AnnChou_Ecoillum_tile.png" />
 	<meta property="og:url" content="https://annchou.github.io/artist-bio.html" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<link rel="stylesheet" href="css/style_resp.css" />
+	<link rel="stylesheet" href="css/style_wor.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
@@ -406,6 +406,7 @@
 
 </body>
 </html>
+
 
 
 
