Update Practices.html  class="button-ghost" to iconbar

--- a/Practices.html
+++ b/Practices.html
@@ -42,7 +42,7 @@
   <header>
     <div class="topnav" id="myTopnav">
       <a href="index.html" class="logo">
-        <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
+        <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Ann Chou logo" />
       </a>
       <a href="index.html">Home 🏠</a>
       <a href="Practices.html">Practices 🧬</a>
@@ -76,7 +76,7 @@
     <a href="https://www.flickr.com/photos/annchou/" class="twitter" aria-label="Flickr"><i class="fa fa-flickr"></i></a>
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
      <!-- ✅ Optional second toggle at the bottom -->
-    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
+    <button id="darkModeToggleIconBar"  class="button-ghost"  aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
   </div>
 
   <main class="main">
@@ -406,6 +406,7 @@
 
 </body>
 </html>
+
 
 
 
