Update Eco_illum.html  class="button-ghost" to icon-bar

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="css/style_resp.css" />
+  <link rel="stylesheet" href="css/style_wor.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.css" />
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox/fancybox.umd.js"></script>
 </head>
@@ -76,7 +76,7 @@
     <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
     <!-- ✅ Optional second toggle at the bottom -->
-    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
+    <button id="darkModeToggleIconBar"  class="button-ghost"  aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
   </div>
 
 
@@ -519,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
