Update index.html  class="button-ghost"  to iconbar

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
 
      <!-- ✅ Optional second toggle at the bottom -->
-    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
+    <button id="darkModeToggleIconBar"  class="button-ghost" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
     
     <!-- 🌙 Second Dark Toggle + 🖍️ Assistive Button (stacked) problem
     <div class="floating-toggle-stack">
@@ -562,6 +562,7 @@
 </body>
 
 </html>
+
 
 
 
