Update Eco_illum.html <img src="rss-eco/<figure class="wide-figure">

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -60,7 +60,7 @@
   </div>
 
   </header>
-<div class="banner-wrapper">
+<figure class="wide-figure">
   <img src="rss-eco\Eco-illuminescence-Xchange-banner.png" alt="Eco Illuminescence Xchanges Gallery banner">
 </div>
 
@@ -519,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
